--- a/README
+++ b/README
@@ -1,9 +1,9 @@
 WSGIAdmin
 =========
 
-Web interface for you server writted in Python. You can try it
+Web interface for you server wrote in Python. You can try it
 and help me, but it is not working now. I have to rewrite some
-parts and because of that I destroy almost everything what works.
+parts and because of that I destroy almost everything what worked.
 
 If you want working version, try first commit in repo.
 
